service/gateway/envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: localhost
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/_gateway/echo"
                          direct_response:
                            status: 200
                            body:
                              inline_string: '{"message": "this is from gateway"}'
                          response_headers_to_add:
                            - header:
                                key: content-type
                                value: application/json
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
